# MonsterSirenDesktop

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .release-it.cjs  404.html  CHANGELOG.md  README.md  appShell.html  build.js  index.html  manifest.json  package.json  pnpm-lock.yaml  service-worker.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1696394071719-43176bed4589b.mjs
.github/workflows/: deploy.yml
.husky/: pre-commit
.storybook/: preview-head.html  preview.ts
_astro/: hoisted.C83JFAQ9.js  hoisted.CTnkjd5D.js  hoisted.mhO7jsSp.js  index.Bg1gp6uc.css  index.CPWk7YEP.css  index.DU89alVo.css  ui-core.Bk43kC2B.js  ui-core.DPhie_n9.js  ui-core.DUB2wpVf.js
docs/dev/: target.md
docs/manual/: .gitignore  astro.config.mjs  package.json
docs/plugin/: README.md
pagefind/: pagefind-entry.json  pagefind.en_1f599470ca.pf_meta  pagefind.en_64663620f4.pf_meta  pagefind.en_7ac6e51d4d.pf_meta  pagefind.en_7db71bdfbc.pf_meta  pagefind.en_cc3da22dff.pf_meta
pagefind/fragment/: en_4025276.pf_fragment  en_45844bb.pf_fragment  en_4c3929b.pf_fragment  en_4eef4f8.pf_fragment  en_665f16c.pf_fragment  en_765a239.pf_fragment  en_7810ba4.pf_fragment  en_86e25e5.pf_fragment  en_949346f.pf_fragment  en_95641b8.pf_fragment  en_9ad5dd7.pf_fragment  en_a472ae8.pf_fragment  en_ae38a88.pf_fragment  en_afd19c7.pf_fragment  en_b141f15.pf_fragment  en_bf4127c.pf_fragment  (+5 more)
public/: fontset.json  init_config.json
scripts/: buildAll.js
src/: App.tsx  main.tsx  styles.css  styles.scss  vite-env.d.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  inject.js  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  global_event.rs  lib.rs  logger.rs  main.rs  proxy.rs  server.rs  system_tray_menu.rs  utils.rs  vanilla_injector.rs
src-tauri/src/Logger/: mod.rs
src-tauri/src/client_env/: mod.rs  node_env.rs
src-tauri/src/client_path/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: AdvancementConfig.rs  BackgroundConfig.rs  DownloadConfig.rs  constants.rs  mod.rs
src-tauri/src/constants/: mod.rs
src-tauri/src/global_enum/: mod.rs
src-tauri/src/global_event/: audio_instance.rs  mod.rs  store.rs
src-tauri/src/global_event/frontend_notify/: mod.rs
src-tauri/src/global_event/notify/: mod.rs
src-tauri/src/global_struct/: mod.rs  music_injector.rs  siren.rs
src-tauri/src/global_struct/plugin_str/: mod.rs
src-tauri/src/global_struct/siren/: mod.rs  response_msg.rs
src-tauri/src/global_utils/: mod.rs
src-tauri/src/plugin_error/: mod.rs
src-tauri/src/plugin_manager/: mod.rs  plugin_instance.rs  plugin_utils.rs
src-tauri/src/proxy/: ApiProxy.rs  CdnProxy.rs  api_proxy.rs  cdn_proxy.rs  mod.rs
src-tauri/src/proxy/handler/: mod.rs
src-tauri/src/proxy/utils/: mod.rs
src-tauri/src/server/: download_server.rs  file_server.rs  mod.rs
src-tauri/src/server/download_server/: download_error.rs
src-tauri/src/server/file_server/: handle_request.rs  utils.rs
src-tauri/src/tauri_commands/: mod.rs
src-tauri/src/vanilla_injector/: mod.rs  siren_injector.rs  template_injector.rs  utils.rs
src-tauri/src/vanilla_injector/custom_playlist_injector/: README.md  manager.rs  mod.rs  pub_struct.rs  tauri_plugin.rs  utils.rs
src-tauri/src/vanilla_injector/local_music_injector/: README.md  inject_event.rs  mod.rs  tauri_plugin.rs
src-tauri/tests/injector/local/add_folder/: config_add.json
(+280 files in other folders)
