[package]
name = "monster-siren-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[package.metadata.commands]
test = "move.cmd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
  "system-tray",
  "path-all",
  "dialog-all",
  "fs-all",
  "window-all",
  "shell-open",
  "devtools",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.5"
futures = "0.3.28"
ws = "0.9.2"
env_logger = "0.6"
colored = "2"
bytes = "1.4.0"
once_cell = "1.18.0"
config = { version = "0.13.4", features = ["json"] }
uuid = { version = "1.6.1", features = ["v4"] }
async-trait = "0.1.74"
regex = "1.10.2"
lazy_static = "1.4.0"
indexmap = "2.1.0"
mime_guess = "2.0.4"
md5 = "0.7.0"
sha256 = "1.4.0"
percent-encoding = "2.3.1"
libloading = "0.8.3"
ts-rs = { version = "8.1.0", features = ["import-esm"] }
syn = "2.0.71"
quote = "1.0.36"
monster-siren-macro = { path = "../packages/monster-siren-macro" }
include_dir = "0.7.4"
rodio = "0.19.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
plugin_inject = []
